# lamella

./: .gitignore  Cargo.toml  Makefile  notes
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs  reqhandle.rs  response.rs  threadpool.rs
server/src/operator/: mod.rs  route.rs  test.rs
server/src/reqhandle/: mod.rs
server/threadpool/src/: lib.rs
