[package]
name = "lamella-server"
version = "0.1.0"
edition = "2021"

[dependencies]
httparse = { version = "1.7.1" }
simple_logger = "2.2.0"
log = "0.4.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lamella-server"
path = "src/main.rs"
